- Added steps I took to get the 80% prediction

--- a/report.html
+++ b/report.html
@@ -13705,7 +13705,14 @@ Make sure to keep track of the various features and conditions you tried before 
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<p><strong>Answer</strong>: <em>Predictions have an accuracy of 80.58%.</em></p>
+<p><strong>Answer</strong>:</p>
+<ol>
+<li>I took a look at parameters which have bounded values like Pclass which varies from 1 to 3 and build the prediction on top of that</li>
+<li>I also checked the same results for both males and female to get good look at the survival rate.</li>
+<li>We can add more parameters to make it even better.</li>
+</ol>
+<p>But with current algorithm:
+<em>Predictions have an accuracy of <strong>80.58%.</strong></em></p>
 
 </div>
 </div>
